@@ -207,6 +207,8 @@ Features:
   when calling the method. Also restructured code that implemented
   issue1714899 moving it from the templating class to the hyperdb.
   (John Rouillard)
+- Improves diagnostics for mail processing: When using logging level = DEBUG,
+  bounces and bounce problems are logged. (Bernhard Reiter)
 
 Fixed:
 
